--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "validate": "^5.2.0"
   },
   "scripts": {
     "dev": "nodemon ./src/main/javascript/server.js"
