--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
