--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,10 @@
   "scripts": {
     "dev-admin": "nodemon ./src/main/javascript/adminServer.js",
     "dev-user": "nodemon ./src/main/javascript/userServer.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0"
   }
 }
